fixed template alignment fix

--- a/public/css/report.css
+++ b/public/css/report.css
@@ -48,3 +48,9 @@ td{
     text-align: right !important;
     align-self: flex-end;
 }
+
+#itemCode{
+    margin-left: 0px !important;
+    text-align: left !important;
+    align-self: flex-start;
+}
